--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<meta property="og:title" content="I coded a game with Zuitt!" />
     <meta property="og:description" content="This Game Development project is powered by Zuitt Coding Bootcamp" />
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
-    <meta property="og:image" content="https://jasteyn.github.io/js-fcb-Jasteyn/image/story-thumbnail-2048.jpg" />
-    <meta property="og:image:secure_url" content="https://jasteyn.github.io/js-fcb-Jasteyn/" />
+    <meta property="og:image" content="https://jasteyn.github.io/JSS/image/story-thumbnail-2048.jpg" />
+    <meta property="og:image:secure_url" content="https://jasteyn.github.io/JSS/" />
 </head>
 <body>
 
@@ -41,7 +41,7 @@
 		<div class="share-button-container">
 				<div class="share-label">Share: </div>
 				<div class="share-icons">
-					<a href="https://www.facebook.com/sharer/sharer.php?u=https://jasteyn.github.io/js-fcb-Jasteyn/" target="_blank">
+					<a href="https://www.facebook.com/sharer/sharer.php?u=https://jasteyn.github.io/JSS/" target="_blank">
 						<img src="./images/share_2048-fb.svg">	
 					</a>
 				</div>
@@ -82,7 +82,7 @@
 		<i class="fa-solid fa-globe"></i>
 	</a>
 
-	<a href="https://www.facebook.com/sharer/sharer.php?u=https://jasteyn.github.io/js-fcb-Jasteyn/" target="_blank">
+	<a href="https://www.facebook.com/sharer/sharer.php?u=https://jasteyn.github.io/JSS/" target="_blank">
 		<i class="fa-brands fa-facebook"></i>
 	</a>
 
